# filesystems-101-exercises

./: AUTHOR  CMakeLists.txt  fetck_all_results.zsh  post_taks.zsh
00-ps/: solution.c
01-lsof/: solution.c
02-fuse-helloworld/: main.c  solution.c
03-io_uring/: cat  solution.c
04-ext2-read-file/: callbacks.c  solution.c
05-ext2-read-dir/: callbacks.c  main.c  solution.c
06-ext2-walk-path/: solution.c
08-ext2-read-sparse-file/: main.c  solution.c
10-ext2-fuse/: main.c  solution.c
13-realpath/: callbacks.c  main.c  solution.c
14-ext2-blkiter/: check.bash  check_block.sh  fs_block_group_descriptor_table.h  fs_inode.h  fs_superblock.h  main.c  run_parallel_check.bash  solution.c
stdlib/: fs_block_group_descriptor_table.c  fs_block_group_descriptor_table.h  fs_dir_entry.c  fs_dir_entry.h  fs_ext2.c  fs_ext2.h  fs_inode.c  fs_inode.h  fs_malloc.c  fs_string.c  fs_superblock.c  fs_superblock.h  fs_void_vector.c  fs_void_vector.h
